<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        app:title="@string/fragment_settings_toolbar_title_text" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="middle">

        <RadioButton
            android:id="@+id/button_light_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_settings_button_light_mode_text"
            android:textSize="@dimen/fragment_settings_radio_button_text_size" />

        <RadioButton
            android:id="@+id/button_dark_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_settings_button_dark_mode_text"
            android:textSize="@dimen/fragment_settings_radio_button_text_size" />

        <RadioButton
            android:id="@+id/button_system_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_settings_button_system_mode_text"
            android:textSize="@dimen/fragment_settings_radio_button_text_size" />

    </RadioGroup>

</LinearLayout>